--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
 @import "/home/jle/.cache/squash/colors.css";
 
+
+* {
+	font-family: "Iosevka";
+	font-size: 20px;
+}
+
+
 html {
-    font-size: 18px;
-    font-family: 'Roboto Mono', monospace;
-    font-weight: black;
+    /*font-size: 18px;*/
+    /*font-family: 'Roboto Mono', monospace;*/
+    /*font-weight: black;*/
     background-color: var(--background);
     color: var(--foreground);
 }
