--- a/style.css
+++ b/style.css
@@ -1,15 +1,14 @@
-@import "/home/jle/.cache/squash/colors.css";
-
+@import "./colors.css";
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');
 
 * {
-	font-family: "Iosevka";
 	font-size: 20px;
 }
 
 
 html {
     /*font-size: 18px;*/
-    /*font-family: 'Roboto Mono', monospace;*/
+    font-family: 'Roboto Mono', monospace;
     /*font-weight: black;*/
     background-color: var(--background);
     color: var(--foreground);
