--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import "./colors.css";
-@import url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');
+@import "/home/jle/squash/.cache/colors.css"
 
 * {
 	font-size: 20px;
@@ -8,7 +8,7 @@
 
 html {
     /*font-size: 18px;*/
-    font-family: 'Roboto Mono', monospace;
+    font-family: 'Iosevka', monospace;
     /*font-weight: black;*/
     background-color: var(--background);
     color: var(--foreground);
